complex/rest2stream/deploy/env/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: APP_NAME
  namespace: PROJECT_NAME
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    jaeger-collector-host: observability-opentelemetry-collector.observability
spec:
  tls:
    - hosts:
        - APP_DOMAIN
      secretName: APP_TLS_SECRET
  defaultBackend:
    service:
      name: APP_NAME
      port:
        number: APP_PORT
